--- a/valentine.html
+++ b/valentine.html
@@ -11,7 +11,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    background: linear-gradient(to bottom, #ff9a9e, #fad0c4);
+    background: linear-gradient(to bottom, #ec407a, #d81b60); /* medium pink */
     font-family: Arial, sans-serif;
     overflow: hidden;
 }
@@ -53,18 +53,19 @@ button {
 /* ❤️ Flying hearts */
 .heart {
     position: fixed;
-    bottom: 0;
-    font-size: 24px;
-    animation: fly 2.5s ease-out forwards;
+    bottom: -50px;
+    font-size: 60px;        /* BIG hearts */
+    animation: flyUp 3.5s ease-in forwards;
+    pointer-events: none;
 }
 
-@keyframes fly {
+@keyframes flyUp {
     from {
         transform: translateY(0) scale(1);
         opacity: 1;
     }
     to {
-        transform: translateY(-600px) scale(1.5);
+        transform: translateY(-100vh) scale(1.3); /* fly to top */
         opacity: 0;
     }
 }
@@ -96,22 +97,30 @@ function moveNo() {
     noBtn.style.top = y + "px";
 }
 
+
 function yesClick() {
-    for (let i = 0; i < 25; i++) {
-        const heart = document.createElement("div");
-        heart.className = "heart";
-        heart.innerText = "💖";
-
-        heart.style.left = Math.random() * window.innerWidth + "px";
-        heart.style.animationDuration =
-            (Math.random() * 1.5 + 1.5) + "s";
-
-        document.body.appendChild(heart);
-
-        setTimeout(() => heart.remove(), 3000);
+    for (let i = 0; i < 12; i++) {   // fewer hearts, but BIG
+        createBigHeart();
     }
 }
+
+function createBigHeart() {
+    const heart = document.createElement("div");
+    heart.className = "heart";
+    heart.innerText = "💖";
+
+    // random horizontal position
+    heart.style.left = Math.random() * (window.innerWidth - 60) + "px";
+
+    // slight delay for wave effect
+    heart.style.animationDelay = (Math.random() * 0.5) + "s";
+
+    document.body.appendChild(heart);
+
+    setTimeout(() => heart.remove(), 4000);
+}
 </script>
+
 
 </body>
 </html>
