--- a/valentine.html
+++ b/valentine.html
@@ -15,13 +15,38 @@ body {
     font-family: Arial, sans-serif;
     overflow: hidden;
 }
+.card {
+    background: white;
+    width: 450px;
+    min-height: 280px;
+    padding: 40px;
+    border-radius: 20px;
+    text-align: center;
+    box-shadow: 0 15px 40px rgba(0,0,0,0.2);
+}
+
+.hidden {
+    display: none;
+}
+
+.yes-btn {
+    margin-top: 20px;
+    padding: 14px 32px;
+    border: none;
+    border-radius: 30px;
+    background: #ff2e6c;
+    color: white;
+    font-size: 16px;
+    cursor: pointer;
+}
 
 .card {
     background: white;
-    padding: 30px;
+    width: 350px;   /* was maybe 350px */
+    padding: 40px;
+    min-height: 280px;
     border-radius: 20px;
-    text-align: center;
-    width: 320px;
+    text-align: center;    
     box-shadow: 0 10px 30px rgba(0,0,0,0.2);
     position: relative;
 }
@@ -82,6 +107,22 @@ button {
     <button id="yes" onclick="yesClick()">Yes 💖</button>
     <button id="no" onmouseover="moveNo()">No 😜</button>
 </div>
+<div class="card" id="questionCard">
+    <h2>💖💐</h2>
+    <h1>Hey Handsome!</h1>
+    <p>Will you be my Valentine this year? 💕</p>
+    <button class="yes-btn" onclick="showLove()">Yes 💖</button>
+</div>
+
+<div class="card hidden" id="loveCard">
+    <h2>💞💝</h2>
+    <h1>Yayyy!!!</h1>
+    <p>
+        You just made my heart the happiest 💗<br>
+        Every moment with you is special ✨<br>
+        Happy Valentine’s Day, my love 💘
+    </p>
+</div>
 
 <script>
 function moveNo() {
@@ -119,6 +160,11 @@ function createBigHeart() {
 
     setTimeout(() => heart.remove(), 4000);
 }
+function showLove() {
+    document.getElementById("questionCard").style.display = "none";
+    document.getElementById("loveCard").style.display = "block";
+}
+
 </script>
 
 
